<resources>
    <string name="app_name">Hanstagram</string>
    <string name="hint_input_id">아이디를 입력하세요</string>
    <string name="hint_input_password">비밀번호를 입력하세요</string>
    <string name="text_ok">확인</string>
    <string name="text_cancel">취소</string>
    <string name="text_nickname">닉네임</string>
    <string name="text_name">이름</string>
    <string name="text_caption">소개</string>
    <string name="text_student_id">학번</string>
    <string name="text_department">학과</string>
    <string name="text_login">로그인</string>
    <string name="text_follow">팔로우</string>
    <string name="text_following_now">팔로우 중</string>
    <string name="text_message">쪽지</string>
    <string name="text_register">회원가입</string>
    <string name="text_edit_profile">프로필 편집</string>
    <string name="text_logout">로그아웃</string>
    <string name="text_question_account">계정이 없으신가요?</string>
    <string name="hint_input_new_id">새 아이디를 입력하세요</string>
    <string name="hint_input_new_password">새 비밀번호를 입력하세요</string>

    <!-- DB Strings -->
    <string name="table_user_private">userPrivate</string>

    <!-- Toast Strings -->
    <string name="toast_input_id">아이디를 입력하세요</string>
    <string name="toast_input_password">비밀번호를 입력하세요</string>
    <string name="toast_input_email">이메일을 입력하세요</string>
    <string name="toast_input_student_id">학번을 입력하세요</string>
    <string name="toast_input_department">학부를 선택하세요</string>
    <string name="toast_no_exist_id">존재하지 않는 아이디입니다</string>
    <string name="toast_wrong_account">잘못된 아이디 또는 비밀번호입니다</string>
    <string name="toast_create_account">회원가입이 완료되었습니다</string>
    <string name="toast_edit_profile">프로필이 변경되었습니다</string>
    <string name="toast_nickname_blank">닉네임을 입력해주세요</string>
    <string name="toast_edit_profile_failed">프로필을 변경할 수 없습니다</string>
    <string name="toast_choose_image">대표 이미지를 선택하세요</string>
    <string name="toast_input_content">내용을 입력하세요</string>
    <string name="toast_error_load_post">게시물 로드에 실패하였습니다.</string>

    <string name="special_app_name">𝓗𝓪𝓷𝓼𝓽𝓪𝓰𝓻𝓪𝓶</string>
    <string name="hint_input_student_id">학번을 입력하세요</string>
    <string name="hint_input_email">이메일을 입력하세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="text_input_content">문구 입력</string>
    <string name="hint_leave_comment">댓글 남기기</string>
    <string name="hint_find_id">아이디 검색</string>
    <string name="hint_input_content">내용 입력</string>
    <string name="text_received_message">받은 메시지</string>
    <string name="text_sent_messages">보낸 메시지</string>
    <string name="text_unread_messages">읽지 않은 메시지</string>
    <string name="text_edit">수정</string>
    <string name="text_delete">삭제</string>
    <string name="text_report">신고</string>
    <string name="text_input_nickname">닉네임 입력</string>
    <string name="text_input_caption">소개 입력</string>
    <string name="text_user_withdrawal">회원 탈퇴</string>

    <string name="alert_withdrawal">정말로 탈퇴하시겠습니까?</string>
    <string name="toast_success_withdrawal">탈퇴가 완료되었습니다</string>
    <string name="text_like">좋아요</string>
    <string name="text_comment">댓글</string>
    <string name="text_dog">개</string>
    <string name="text_dislike">싫어요</string>
    <string name="text_post">게시물</string>
    <string name="text_follower">팔로워</string>
    <string name="text_following">팔로잉</string>
    <string name="text_select_department">학부를 선택하세요</string>
</resources>