<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login_activity"
    tools:context=".ui.activity.RegisterActivity">

    <EditText
        android:id="@+id/edit_text_new_id"
        style="@style/login_activity_size"
        android:background="@drawable/edittext_normal"
        android:layout_marginTop="196dp"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/hint_input_new_id"/>

    <EditText
        android:id="@+id/edit_text_new_password"
        style="@style/login_activity_size"
        android:background="@drawable/edittext_normal"
        android:layout_marginTop="16dp"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:hint="@string/hint_input_new_password"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_new_id"
        app:layout_constraintStart_toStartOf="@+id/edit_text_new_id"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_new_id" />

    <EditText
        android:id="@+id/edit_text_email"
        style="@style/login_activity_size"
        android:background="@drawable/edittext_normal"
        android:layout_marginTop="16dp"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:hint="@string/hint_input_email"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_new_id"
        app:layout_constraintStart_toStartOf="@+id/edit_text_new_id"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_new_password" />

    <EditText
        android:id="@+id/edit_text_student_id"
        style="@style/login_activity_size"
        android:background="@drawable/edittext_normal"
        android:layout_marginTop="16dp"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:inputType="numberSigned"
        android:hint="@string/hint_input_student_id"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_new_id"
        app:layout_constraintStart_toStartOf="@+id/edit_text_new_id"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

    <EditText
        android:id="@+id/edit_text_department"
        style="@style/login_activity_size"
        android:background="@drawable/edittext_normal"
        android:hint="@string/text_select_department"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:clickable="true"
        android:cursorVisible="false"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@id/edit_text_student_id"
        app:layout_constraintStart_toStartOf="@id/edit_text_new_id"
        app:layout_constraintEnd_toEndOf="@id/edit_text_new_id" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        style="@style/login_activity_size"
        android:background="@drawable/background_login_button"
        android:text="@string/text_register"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_new_password"
        app:layout_constraintStart_toStartOf="@+id/edit_text_new_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_department" />

</androidx.constraintlayout.widget.ConstraintLayout>