<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/wrapper_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_edit_post"
            style="@style/post_icon_style"
            android:src="@drawable/baseline_edit_32" />

        <TextView
            android:id="@+id/text_edit_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/text_edit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wrapper_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintStart_toStartOf="@id/wrapper_edit"
        app:layout_constraintTop_toBottomOf="@id/wrapper_edit">

        <ImageView
            android:id="@+id/image_delete_post"
            style="@style/post_icon_style"
            android:src="@drawable/baseline_delete_32" />


        <TextView
            android:id="@+id/text_delete_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/text_delete" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wrapper_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintStart_toStartOf="@id/wrapper_edit"
        app:layout_constraintTop_toBottomOf="@id/wrapper_delete">

        <ImageView
            android:id="@+id/image_report_post"
            style="@style/post_icon_style"
            android:src="@drawable/ic_siren_48" />


        <TextView
            android:id="@+id/text_report_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/text_report" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>