<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="profilePageFragment"
            type="com.dbclass.hanstagram.ui.fragment.ProfilePageFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.ProfilePageFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_profile"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_account_96"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/wrapper_wrappers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/image_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_profile"
            app:layout_constraintTop_toTopOf="@id/image_profile">

            <LinearLayout
                android:id="@+id/wrapper_text_posts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_post_count"
                    style="@style/text_count_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(profilePageFragment.postsCount)}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_post" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wrapper_text_followers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_follower_count"
                    style="@style/text_count_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(profilePageFragment.followersCount)}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_follower" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wrapper_text_followings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_following_count"
                    style="@style/text_count_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(profilePageFragment.followingsCount)}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_following" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/text_nickname"
            style="@style/text_nickname_middle_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@id/image_profile"
            app:layout_constraintTop_toBottomOf="@id/image_profile" />

        <TextView
            android:id="@+id/text_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/text_nickname"
            app:layout_constraintTop_toBottomOf="@id/text_nickname" />

        <TextView
            android:id="@+id/text_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(profilePageFragment.temperature)}"
            android:textColor="@color/temperature_green"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/button_follow"
            app:layout_constraintStart_toStartOf="@id/image_profile"
            app:layout_constraintTop_toBottomOf="@id/text_content" />

        <Button
            android:id="@+id/button_follow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginStart="12dp"
            android:text="@{profilePageFragment.followState}"
            app:layout_constraintEnd_toStartOf="@+id/button_message"
            app:layout_constraintStart_toEndOf="@id/text_temperature"
            app:layout_constraintTop_toBottomOf="@id/text_content" />

        <Button
            android:id="@+id/button_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="@string/text_message"
            app:layout_constraintBottom_toBottomOf="@id/button_follow"
            app:layout_constraintEnd_toEndOf="@id/wrapper_wrappers"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_follow"
            app:layout_constraintTop_toTopOf="@id/button_follow" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_follow">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_page_48" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_comments_48" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager_of_profile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>